--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath 'com.google.gms:google-services:3.1.0'
+    classpath 'com.google.gms:google-services:3.1.1' // google-services plugin
     classpath 'com.android.tools.build:gradle:2.3.3'
 
     // NOTE: Do not place your application dependencies here; they belong
@@ -16,8 +16,10 @@ buildscript {
 allprojects {
   repositories {
     jcenter()
+    maven { url 'https://maven.google.com' }
   }
 }
+
 
 task clean(type: Delete) {
   delete rootProject.buildDir
